<resources>
    <string name="app_name">Pakdim</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="tab_new">NEW</string>
    <string name="tab_top">TOP</string>
    <string name="tab_monthly">MONTHLY</string>
    <string name="title_account">Account</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_create_account">Create account</string>
    <string name="title_activity_my_list">My List</string>
    <string name="title_activity_my_posts">My Posts</string>
    <string name="title_activity_my_comments">My Comments</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password shouldn\'t be empty</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signup_failed">"signup failed"</string>
    <string name="title_activity_add_article">Add article</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title">Title</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="detail">Detail</string>

    //--------

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="facebook_app_id">2551287921828495</string> <string name="fb_login_protocol_scheme">fb2551287921828495</string>
    <string name="min_ago"> minutes ago</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">a minute ago</string>
    <string name="hour_ago">an hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">days ago</string>
    <string name="weeks_ago">weeks ago</string>
    <string name="month">month ago</string>
    <string name="months_ago">months ago</string>
    <string name="more_than_year"> more than year ago</string>

    <string name="write_comment">Write comment</string>
    <string name="make_photo">Make photo</string>
    <string name="make_video">Make video</string>
    <string name="get_video_from_folder">Get video from folder</string>
    <string name="get_image_from_gallery">Get picture from gallery</string>


</resources>
