<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.degradators.degradators.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.degradators.degradators.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.degradators.degradators.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_navigation_account_to_navigation_signup"
            app:destination="@id/navigation_signup" />
    </fragment>


<!--    <fragment-->
<!--        android:id="@+id/navigation_signin"-->
<!--        android:name="com.degradators.degradators.ui.account.SignInFragment"-->
<!--        android:label="signin">-->
<!--        <action-->
<!--            android:id="@+id/action_navigation_signin_to_navigation_signup"-->
<!--            app:destination="@id/navigation_signup" />-->
<!--    </fragment>-->

    <fragment
        android:id="@+id/navigation_signup"
        android:name="com.degradators.degradators.ui.account.signup.SignUpFragment"
        android:label="signup"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_navigation_signup_to_navigation_account"
            app:destination="@+id/navigation_account"
            app:exitAnim="@anim/fragment_close_exit"
            app:launchSingleTop="false"
            app:popUpTo="@+id/navigation_account"
            app:popUpToInclusive="true"/>
    </fragment>
</navigation>